Fix clunky button behavior
-Instructions and go to buttons would awkwardly overlap when the
screen shrank.
-Set media such that when that point is reached they are vertically
aligned.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -137,19 +137,19 @@ body {
   color: black;
 }
 
-#go-to-lab-wrapper {
+.go-to-lab-wrapper {
   float: right;
 }
 
-#go-to-viewer-wrapper {
+.go-to-viewer-wrapper {
   float: right;
 }
 
-#lab-instructions-wrapper {
+.lab-instructions-wrapper {
   float: left;
 }
 
-#viewer-instructions-wrapper {
+.viewer-instructions-wrapper {
   float: left;
 }
 
@@ -452,4 +452,28 @@ button.thoughtbot:active {
   background-image: linear-gradient(top, #d43c28 0%, #ad3224 50%, #9c1500 50%, #700d00 100%);
   -webkit-box-shadow: inset 0 0 0 1px rgba(255, 115, 100, 0.4);
   box-shadow: inset 0 0 0 1px rgba(255, 115, 100, 0.4);
+}
+
+@media screen and (max-width: 1270px) {
+  #go-to-lab-wrapper {
+    text-align: center;
+    float: none;
+  }
+
+  #go-to-viewer-wrapper {
+    text-align: center;
+    float: none;
+  }
+
+  #lab-instructions-wrapper {
+    text-align: center;
+    float: none;
+    margin-bottom: 5px;
+  }
+
+  #viewer-instructions-wrapper {
+    text-align: center;
+    float: none;
+    margin-bottom: 5px;
+  }
 }
